invest/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/imagedefs.h


int I_new_signature(struct Signature *);

int I_free_signatures(struct Signature *);

int I_read_one_signature(FILE *, struct Signature *);

int I_read_signatures(FILE *, struct Signature *);

int I_write_signatures(FILE *, struct Signature *);


/* sigfile.c */
FILE *I_fopen_signature_file_new(const char *, const char *, const char *);

FILE *I_fopen_signature_file_old(const char *, const char *, const char *);


/* sigset.c */
int I_SigSetNClasses(struct SigSet *);

struct ClassData *I_AllocClassData(struct SigSet *, struct ClassSig *, int);

int I_InitSigSet(struct SigSet *);

int I_SigSetNBands(struct SigSet *, int);

struct ClassSig *I_NewClassSig(struct SigSet *);

struct SubSig *I_NewSubSig(struct SigSet *, struct ClassSig *);

int I_ReadSigSet(FILE *, struct SigSet *);

int I_SetSigTitle(struct SigSet *, const char *);

const char *I_GetSigTitle(const struct SigSet *);

int I_SetClassTitle(struct ClassSig *, const char *);

const char *I_GetClassTitle(const struct ClassSig *);

int I_WriteSigSet(FILE *, const struct SigSet *);


/* sigsetfile.c */
FILE *I_fopen_sigset_file_new(const char *, const char *, const char *);

FILE *I_fopen_sigset_file_old(const char *, const char *, const char *);


/* target.c */
int I_get_target(const char *, char *, char *);

int I_put_target(const char *, const char *, const char *);


/* title.c */
int I_get_group_title(const char *, char *, int);

int I_put_group_title(const char *, const char *);


/* var.c */
double I_variance(double, double, int);

double I_stddev(double, double, int);