OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/imagery.py


# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 85
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_new_signature'):
    I_new_signature = _libs['grass_I.6.4.2RC2'].I_new_signature
    I_new_signature.restype = c_int
    I_new_signature.argtypes = [POINTER(struct_Signature)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 86
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_free_signatures'):
    I_free_signatures = _libs['grass_I.6.4.2RC2'].I_free_signatures
    I_free_signatures.restype = c_int
    I_free_signatures.argtypes = [POINTER(struct_Signature)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 87
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_read_one_signature'):
    I_read_one_signature = _libs['grass_I.6.4.2RC2'].I_read_one_signature
    I_read_one_signature.restype = c_int
    I_read_one_signature.argtypes = [POINTER(FILE), POINTER(struct_Signature)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 88
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_read_signatures'):
    I_read_signatures = _libs['grass_I.6.4.2RC2'].I_read_signatures
    I_read_signatures.restype = c_int
    I_read_signatures.argtypes = [POINTER(FILE), POINTER(struct_Signature)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 89
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_write_signatures'):
    I_write_signatures = _libs['grass_I.6.4.2RC2'].I_write_signatures
    I_write_signatures.restype = c_int
    I_write_signatures.argtypes = [POINTER(FILE), POINTER(struct_Signature)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 92
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_signature_file_new'):
    I_fopen_signature_file_new = _libs['grass_I.6.4.2RC2'].I_fopen_signature_file_new
    I_fopen_signature_file_new.restype = POINTER(FILE)
    I_fopen_signature_file_new.argtypes = [String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 93
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_signature_file_old'):
    I_fopen_signature_file_old = _libs['grass_I.6.4.2RC2'].I_fopen_signature_file_old
    I_fopen_signature_file_old.restype = POINTER(FILE)
    I_fopen_signature_file_old.argtypes = [String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 96
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_SigSetNClasses'):
    I_SigSetNClasses = _libs['grass_I.6.4.2RC2'].I_SigSetNClasses
    I_SigSetNClasses.restype = c_int
    I_SigSetNClasses.argtypes = [POINTER(struct_SigSet)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 97
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_AllocClassData'):
    I_AllocClassData = _libs['grass_I.6.4.2RC2'].I_AllocClassData
    I_AllocClassData.restype = POINTER(struct_ClassData)
    I_AllocClassData.argtypes = [POINTER(struct_SigSet), POINTER(struct_ClassSig), c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 98
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_InitSigSet'):
    I_InitSigSet = _libs['grass_I.6.4.2RC2'].I_InitSigSet
    I_InitSigSet.restype = c_int
    I_InitSigSet.argtypes = [POINTER(struct_SigSet)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 99
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_SigSetNBands'):
    I_SigSetNBands = _libs['grass_I.6.4.2RC2'].I_SigSetNBands
    I_SigSetNBands.restype = c_int
    I_SigSetNBands.argtypes = [POINTER(struct_SigSet), c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 100
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_NewClassSig'):
    I_NewClassSig = _libs['grass_I.6.4.2RC2'].I_NewClassSig
    I_NewClassSig.restype = POINTER(struct_ClassSig)
    I_NewClassSig.argtypes = [POINTER(struct_SigSet)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 101
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_NewSubSig'):
    I_NewSubSig = _libs['grass_I.6.4.2RC2'].I_NewSubSig
    I_NewSubSig.restype = POINTER(struct_SubSig)
    I_NewSubSig.argtypes = [POINTER(struct_SigSet), POINTER(struct_ClassSig)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 102
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_ReadSigSet'):
    I_ReadSigSet = _libs['grass_I.6.4.2RC2'].I_ReadSigSet
    I_ReadSigSet.restype = c_int
    I_ReadSigSet.argtypes = [POINTER(FILE), POINTER(struct_SigSet)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 103
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_SetSigTitle'):
    I_SetSigTitle = _libs['grass_I.6.4.2RC2'].I_SetSigTitle
    I_SetSigTitle.restype = c_int
    I_SetSigTitle.argtypes = [POINTER(struct_SigSet), String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 104
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_GetSigTitle'):
    I_GetSigTitle = _libs['grass_I.6.4.2RC2'].I_GetSigTitle
    I_GetSigTitle.restype = ReturnString
    I_GetSigTitle.argtypes = [POINTER(struct_SigSet)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 105
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_SetClassTitle'):
    I_SetClassTitle = _libs['grass_I.6.4.2RC2'].I_SetClassTitle
    I_SetClassTitle.restype = c_int
    I_SetClassTitle.argtypes = [POINTER(struct_ClassSig), String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 106
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_GetClassTitle'):
    I_GetClassTitle = _libs['grass_I.6.4.2RC2'].I_GetClassTitle
    I_GetClassTitle.restype = ReturnString
    I_GetClassTitle.argtypes = [POINTER(struct_ClassSig)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 107
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_WriteSigSet'):
    I_WriteSigSet = _libs['grass_I.6.4.2RC2'].I_WriteSigSet
    I_WriteSigSet.restype = c_int
    I_WriteSigSet.argtypes = [POINTER(FILE), POINTER(struct_SigSet)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 110
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_sigset_file_new'):
    I_fopen_sigset_file_new = _libs['grass_I.6.4.2RC2'].I_fopen_sigset_file_new
    I_fopen_sigset_file_new.restype = POINTER(FILE)
    I_fopen_sigset_file_new.argtypes = [String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 111
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_sigset_file_old'):
    I_fopen_sigset_file_old = _libs['grass_I.6.4.2RC2'].I_fopen_sigset_file_old
    I_fopen_sigset_file_old.restype = POINTER(FILE)
    I_fopen_sigset_file_old.argtypes = [String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 114
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_get_target'):
    I_get_target = _libs['grass_I.6.4.2RC2'].I_get_target
    I_get_target.restype = c_int
    I_get_target.argtypes = [String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 115
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_put_target'):
    I_put_target = _libs['grass_I.6.4.2RC2'].I_put_target
    I_put_target.restype = c_int
    I_put_target.argtypes = [String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 118
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_get_group_title'):
    I_get_group_title = _libs['grass_I.6.4.2RC2'].I_get_group_title
    I_get_group_title.restype = c_int
    I_get_group_title.argtypes = [String, String, c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 119
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_put_group_title'):
    I_put_group_title = _libs['grass_I.6.4.2RC2'].I_put_group_title
    I_put_group_title.restype = c_int
    I_put_group_title.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 122
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_variance'):
    I_variance = _libs['grass_I.6.4.2RC2'].I_variance
    I_variance.restype = c_double
    I_variance.argtypes = [c_double, c_double, c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 123
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_stddev'):
    I_stddev = _libs['grass_I.6.4.2RC2'].I_stddev
    I_stddev.restype = c_double
    I_stddev.argtypes = [c_double, c_double, c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gis.h: 75
try:
    GNAME_MAX = 256
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 7
try:
    INAME_LEN = GNAME_MAX
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 105
try:
    SIGNATURE_TYPE_MIXED = 1
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 106
try:
    GROUPFILE = 'CURGROUP'
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 106
try:
    SUBGROUPFILE = 'CURSUBGROUP'
except:
    pass

Ref_Color = struct_Ref_Color # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 9

Ref_Files = struct_Ref_Files # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 19

Ref = struct_Ref # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 25

Tape_Info = struct_Tape_Info # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 32

Control_Points = struct_Control_Points # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 39

One_Sig = struct_One_Sig # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 49

Signature = struct_Signature # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 60

SubSig = struct_SubSig # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 68

ClassData = struct_ClassData # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 79

ClassSig = struct_ClassSig # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 87

SigSet = struct_SigSet # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\imagery.h: 98

# No inserted files

